# janbask-learning

./: README.md  Untitled.ipynb  pyproject.toml
day-1/: basic_programs.py  calculator.py  conditional_basic.py  first.py  loop_program.py  prime_number.py
day-2/: file-reader.py  file-reader_ex2.py  function_ex.py  function_ex2.py  string_ex.py
day-3/: dict_ex.py  dict_ex2.py  list_ex.py  list_ex2.py  loreum.txt  word-counter.txt
day-4/: data.json  json_reader.py  regexp.py  regexp1.py  tpl_ex.py
day-5/: fetcher.py
day-6/: first.py  second.py  third.py  weather-reader.py
day-7/: basic.py  data-reader.py  data.sqlite  data.sqlite3  ud_oper.py
